--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -38,7 +38,6 @@
     "react-native-tailwindcss": "^1.1.11",
     "react-native-vector-icons": "^10.3.0",
     "react-native-video": "^6.18.0",
-    "react-native-worklets": "^0.7.1",
     "srt-parser-2": "^1.2.3"
   },
   "private": true
