--- a/app.json
+++ b/app.json
@@ -33,6 +33,9 @@
       "expo-asset",
       "expo-font"
     ],
+    "assetBundlePatterns": [
+      "assets/**/*"
+    ],
     "extra": {
       "router": {
         "origin": false
